add env variables for cypress, add run script to run cypress test headless

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "cypress:headless": "cypress run --headless --browser chrome"
+  },
   "devDependencies": {
     "cypress": "^12.5.1"
   }
