Added reporter | Added shortcut for headless launch

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "cypress:headless": "cypress run --headless --browser chrome"
   },
   "devDependencies": {
-    "cypress": "^12.5.1"
+    "cypress": "^12.5.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "mocha": "^10.2.0"
   }
 }
